risc0/zirgen/dsl/test/repro/map_non_array.zir
// RUN: not zirgen %s 2>&1 | FileCheck %s
// CHECK: error: this map expression's array value has non-array type

component TestMap() {
  for i : 0 { i + 2 }
}

